<resources>
    <string name="app_name">ShiftFinal</string>
    <string name="onboarding_second_small_text">Когда займ будет одобрен, подойдите с паспортом в <font color='#DEB800'>отделение банка</font> для подписания договора</string>
    <string name="help_text">Остались вопросы по использованию приложения? Обратитесь к нам на горячую линию <font color='#DEB800'>8-800-300-10-10</font></string>
    <string name="help_title_text">Мы поможем</string>
    <string name="special_offer_button_text">Ближайшее отделение банка</string>
    <string name="special_offer_text">Погасите займ досрочно и мы увеличим лимит для следующего займа</string>
    <string name="special_offer_title_text">Специальное предложение</string>
    <string name="login_hint">Логин</string>
    <string name="password_hint">Пароль</string>
    <string name="repeat_password_hint">Повторите пароль</string>
    <string name="register_button_text">Зарегестрироваться</string>
    <string name="login_button_text">Войти</string>
    <string name="enter_tab_button_text">Вход</string>
    <string name="registration_tab_text">Регистрация</string>
    <string name="loan_details_hint_text">Когда займ примет статус «Одобрен», Вам нужно будет подойти с паспортом в отделение банка для подписания договора и получить деньги</string>
    <string name="loan_status_title">Статус</string>
    <string name="loan_amount">Сумма</string>
    <string name="loan_percent_title">Процент</string>
    <string name="loan_period_title">Период (дней)</string>
    <string name="loan_date_title">Дата оформления</string>
    <string name="loan_number_title">Номер займа</string>
    <string name="loan_telephone_title">Номер телефона</string>
    <string name="loan_second_name_title">Фамилия</string>
    <string name="loan_name_title">Имя</string>
    <string name="banks_stub_button_text">Вернуться на главную</string>
    <string name="accept_button_text">Посмотреть адреса банков</string>
    <string name="accept_hint_text">Для получения придите в банк c паспортом до 20 мая</string>
    <string name="loan_application_title_text">Ваши данные</string>
    <string name="loan_appliation_name_hint">Имя</string>
    <string name="loan_application_second_name_hint">Фамилия</string>
    <string name="loan_application_button_text">Оформить займ</string>
    <string name="loan_application_hint">После оформления заявки на займ, банк проведет анализ вашей кредитной истории</string>
    <string name="loan_application_telephone_hint">Телефон</string>
    <string name="title_decline">Заявка не одобрена</string>
    <string name="hint_decline">Сейчас мы не можем одобрить вашу заявку</string>
    <string name="to_main_button_text">Вернуться на главную</string>
    <string name="loan_list_load_error">Ошибка загрузки списка займов, попробуйте обновить список!</string>
    <string name="onboarding_next_button_text">Далее</string>
    <string name="onboarding_back_button_text">Назад</string>
    <string name="onboarding_title">Оформить займ</string>
    <string name="onboarding_hint">Выберите сумму и нажмите «продолжить». Затем укажите свои данные.</string>
    <string name="onboarding_hint_2">После нажатия «Оформить займ» заявка поступит в банк</string>
    <string name="onboarding_title_second">Получить займ</string>
    <string name="onboarding_second_hint">Отслеживайте изменение статуса заявки.</string>
    <string name="onboarding_third_title">Оформленные займы</string>
    <string name="onboarding_third_hint">На главном экране приложения отображается список оформленных займов.</string>
    <string name="loan_amount_title_home">Сумма займа</string>
    <string name="home_condition_text">Условия</string>
    <string name="my_loans_title_home">Мои займы</string>
    <string name="no_loans_hint_home">Здесь будут отображаться Ваши активные займы</string>
    <string name="take_loan_button_text_home">Продолжить</string>
    <string name="loan_banner_title">Получите займ в 2 клика</string>
    <string name="loan_banner_text">Деньги наличными на любые цели</string>
    <string name="user_name_taken_registeration_error">Имя пользовател занято</string>
    <string name="look_all_loans_button_text">Посмотреть все</string>
    <string name="my_loans_text">Мои займы</string>
    <string name="offers_text">Предложения для вас</string>
    <string name="banks_text">Отделения банка</string>
    <string name="help_menu_text">Помощь</string>
    <string name="exit_text">Выйти</string>
    <string name="load_error_text">Ошибка загрузки данных, попробуйте обновить!</string>
    <string name="passwords_not_the_same">Пароли не совпадают</string>
    <string name="only_russian_letters">Только русские буквы</string>
    <string name="wrong_telephon_number">Номера не существует. Проверьте правильность ввода</string>
    <string name="wrong_login_input_type">Только цифры и латинские буквы</string>
    <string name="indicator_approved_text">Одобрен</string>
    <string name="inicator_registered_text">На рассмотрении</string>
    <string name="indicator_done_text">Выдан</string>
    <string name="loan_application_tab_title">Оформление займа</string>
    <string name="banks_stub_text">Сервис временно недоступен</string>
</resources>