<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.fragments.LoanDetailsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/errorMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/load_error_text"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ProgressBar
            android:id="@+id/progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:indeterminateTint="@color/permanent_primary"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.appbar.AppBarLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.appbar.MaterialToolbar
                        android:id="@+id/topAppBar"
                        android:layout_width="match_parent"
                        android:layout_height="?attr/actionBarSize"
                        android:background="@color/white"
                        app:navigationIcon="@drawable/arrow_left" />
                </com.google.android.material.appbar.AppBarLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:text="@string/loan_application_title_text"
                    android:textColor="@color/font_primary"
                    android:textFontWeight="400"
                    android:textSize="16sp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loanName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/loan_appliation_name_hint"
                    android:textColorHint="@color/font_disable"
                    app:boxBackgroundColor="@color/bg_secondary"
                    app:boxStrokeColor="@drawable/input_border_color"
                    app:boxStrokeWidthFocused="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/font_primary">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loanSecondName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/loan_application_second_name_hint"
                    android:textColorHint="@color/font_disable"
                    app:boxBackgroundColor="@color/bg_secondary"
                    app:boxStrokeColor="@drawable/input_border_color"
                    app:boxStrokeWidthFocused="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/font_primary">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/loanPhone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="16dp"
                    android:layout_marginBottom="12dp"
                    android:hint="@string/loan_application_telephone_hint"
                    android:textColorHint="@color/font_disable"
                    app:boxBackgroundColor="@color/bg_secondary"
                    app:boxStrokeColor="@drawable/input_border_color"
                    app:boxStrokeWidthFocused="1dp">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/font_primary">

                    </com.google.android.material.textfield.TextInputEditText>
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginHorizontal="16dp"
                    android:layout_weight="0.6"
                    android:lineHeight="16sp"
                    android:text="@string/loan_application_hint"
                    android:textColor="@color/font_secondary"
                    android:textFontWeight="400"
                    android:textSize="12sp" />

                <Button
                    android:id="@+id/btnApplyLoan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:backgroundTint="#FED200"
                    android:text="@string/loan_application_button_text"
                    android:textColor="#151E2A"
                    app:cornerRadius="8dp" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
