<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#151E2A"
    android:gravity="bottom|center"
    android:orientation="vertical"
    tools:context=".ui.fragments.LoginFragment">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:src="@drawable/logo_night" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/logic_round_corner_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center">

                <Button
                    android:id="@+id/btnEnter"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingHorizontal="17dp"
                    android:paddingVertical="10dp"
                    android:text="@string/enter_tab_button_text"
                    android:textColor="#73787F" />

                <View
                    android:layout_width="2dp"
                    android:layout_height="match_parent"
                    android:layout_marginHorizontal="1dp"
                    android:layout_marginVertical="8dp"
                    android:background="@drawable/divider_background" />

                <Button
                    android:id="@+id/btnRegister"
                    style="@style/Widget.Material3.Button.TextButton"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingHorizontal="17dp"
                    android:paddingVertical="10dp"
                    android:text="@string/registration_tab_text"
                    android:textColor="@color/permanent_primary_dark" />

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="12dp"
                android:hint="@string/login_hint"
                android:textColorHint="@color/font_secondary"
                app:boxStrokeColor="@color/border_primary"
                app:boxStrokeWidthFocused="1dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/loginEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="text"
                    android:textColor="@color/font_primary">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="12dp"
                android:hint="@string/password_hint"
                android:textColorHint="@color/font_secondary"
                app:boxStrokeColor="@color/border_primary"
                app:boxStrokeWidthFocused="1dp"
                app:endIconDrawable="@drawable/show_password_drawable"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLines="1"
                    android:inputType="textPassword"
                    android:textColor="@color/font_primary">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/repeatPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginBottom="12dp"
                android:hint="@string/repeat_password_hint"
                android:textColorHint="@color/font_secondary"
                app:boxStrokeColor="@color/border_primary"
                app:boxStrokeWidthFocused="1dp"
                app:endIconDrawable="@drawable/show_password_drawable"
                app:endIconMode="password_toggle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/repeatPasswordEditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/font_primary">

                </com.google.android.material.textfield.TextInputEditText>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:backgroundTint="@color/permanent_primary"
                android:text="@string/register_button_text"
                android:textColor="#151E2A"
                app:cornerRadius="8dp" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>