<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".ui.HomeFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/topAppBar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:menu="@menu/top_app_bar"
                app:title="Меню" />
        </com.google.android.material.appbar.AppBarLayout>

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.8">

            <TableRow android:id="@+id/myLoans">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_marginVertical="19dp"
                    android:layout_weight="0.8"
                    android:textSize="14sp"
                    android:textFontWeight="500"
                    android:lineHeight="18sp"
                    android:textColor="@color/font_primary"
                    android:text="@string/my_loans_text" />

                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@drawable/arrow_right" />
            </TableRow>

            <TableRow android:id="@+id/offers">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_marginVertical="19dp"
                    android:layout_weight="0.8"
                    android:textSize="14sp"
                    android:textFontWeight="500"
                    android:lineHeight="18sp"
                    android:textColor="@color/font_primary"
                    android:text="@string/offers_text" />

                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@drawable/arrow_right" />
            </TableRow>

            <TableRow android:id="@+id/banks">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_marginVertical="19dp"
                    android:layout_weight="0.8"
                    android:textSize="14sp"
                    android:textFontWeight="500"
                    android:lineHeight="18sp"
                    android:textColor="@color/font_primary"
                    android:text="@string/banks_text" />

                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@drawable/arrow_right" />
            </TableRow>

            <TableRow android:id="@+id/help">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_marginVertical="19dp"
                    android:layout_weight="0.8"
                    android:textSize="14sp"
                    android:textFontWeight="500"
                    android:lineHeight="18sp"
                    android:textColor="@color/font_primary"
                    android:text="@string/help_menu_text" />

                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@drawable/arrow_right" />
            </TableRow>

            <TableRow android:id="@+id/exit">

                <TextView
                    android:layout_height="wrap_content"
                    android:layout_width="0dp"
                    android:layout_marginVertical="19dp"
                    android:layout_weight="0.8"
                    android:textSize="14sp"
                    android:textFontWeight="500"
                    android:lineHeight="18sp"
                    android:textColor="@color/font_primary"
                    android:text="@string/exit_text" />

                <ImageView
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_margin="16dp"
                    android:src="@drawable/arrow_right" />
            </TableRow>

        </TableLayout>

    </LinearLayout>

</ScrollView>