<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/cross" />
    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/specialOfferImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/special_offer_icon"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout"
        app:layout_constraintBottom_toTopOf="@+id/specialOfferTitle"/>

    <TextView
        android:id="@+id/specialOfferTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="38dp"
        android:layout_marginTop="28dp"
        android:text="@string/special_offer_title_text"
        android:textColor="#151E2A"
        android:textFontWeight="500"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialOfferImage"
        app:layout_constraintBottom_toTopOf="@+id/specialOfferMessage"/>

    <TextView
        android:id="@+id/specialOfferMessage"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="110dp"
        android:layout_marginVertical="16dp"
        android:gravity="center"
        android:lineHeight="20sp"
        android:maxWidth="328dp"
        android:text="@string/special_offer_text"
        android:textColor="#151E2A"
        android:textFontWeight="400"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnSpecialOffer"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/specialOfferTitle" />

    <Button
        android:id="@+id/btnSpecialOffer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="#FED200"
        android:text="@string/special_offer_button_text"
        android:textColor="#151E2A"
        android:textFontWeight="500"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>