<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/white"
            app:navigationIcon="@drawable/cross" />
    </com.google.android.material.appbar.AppBarLayout>


    <ImageView
        android:id="@+id/errorImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/error_icon"
        app:layout_constraintVertical_chainStyle="packed"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/errorTitle"
        app:layout_constraintTop_toBottomOf="@+id/appBarLayout" />

    <TextView
        android:id="@+id/errorTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:layout_marginBottom="16dp"
        android:layout_marginHorizontal="73dp"
        android:text="@string/title_decline"
        android:textColor="@color/font_primary"
        android:textFontWeight="500"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorImage"
        app:layout_constraintBottom_toTopOf="@+id/errorMessage" />

    <TextView
        android:id="@+id/errorMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="328dp"
        android:gravity="center"
        android:layout_marginHorizontal="16dp"
        android:layout_marginBottom="16dp"
        android:lineHeight="20sp"
        android:text="@string/hint_decline"
        android:textColor="@color/font_primary"
        android:textFontWeight="400"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBackToMain"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/errorTitle" />


    <Button
        android:id="@+id/btnBackToMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:backgroundTint="@color/permanent_primary"
        android:text="@string/to_main_button_text"
        android:textColor="@color/font_primary"
        android:textFontWeight="500"
        app:cornerRadius="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>